--- a/index.html
+++ b/index.html
@@ -55,11 +55,41 @@
                     <h4 class="info-title">From:</h4>
                     <p class="info-description">Savar, Dhaka</p>
                 </div>
-
             </div>
         </section>
-    </main>
 
+        <!-- What i do section start  -->
+        <section>
+            <h3 class="section-title">What I Do</h3>
+            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience
+            Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <!-- .skill*4>img+h3.skill-title+p.skill-description  -->
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <h3 class="skill-title"></h3>
+                    <p class="skill-description"></p>
+                </div>
+            </div>
+
+        </section>
+    </main>
     <footer>
 
     </footer>
